--- a/assets/templates/forex/templates/about-us.html
+++ b/assets/templates/forex/templates/about-us.html
@@ -65,9 +65,9 @@
       <p class="about__pb">Naturally, the aim of Forex trading is to earn more money than you`ve invested. Therefore at Forex24 Global , one of our main goals is to empower you to fulfil this goals. Everything you need in order to make it is here, the rest is up to you. All the features of the website have been specially designed to aid our users. Our passion towards our customers is our main drive and what leads us forward. Trading involves risks of loss, for further information please read our Risk Disclosure.</p>
     </div>
   </section>
-  <div class="account__pay">
-    <img src="../img/pay-sprite.png" alt="">
-  </div>
+  <section class="payment  payment--temp">
+    <div class="payment__box"></div>
+  </section>
   <footer class="page-footer">
     <div class="container">
       <div class="page-footer__flex">
