--- a/assets/templates/forex/templates/account-types.html
+++ b/assets/templates/forex/templates/account-types.html
@@ -186,9 +186,9 @@
       </div>
       <p>Trading involves risk of loss</p>
     </div>
-    <div class="account__pay">
-      <img src="../img/pay-sprite.png" alt="">
-    </div>
+    <section class="payment  payment--temp">
+      <div class="payment__box"></div>
+    </section>
   </section>
   <footer class="page-footer">
     <div class="container">
