--- a/assets/templates/forex/templates/funding.html
+++ b/assets/templates/forex/templates/funding.html
@@ -237,9 +237,9 @@
       <p class="funding__pb">*An additional €5 fee will apply for amounts above the initial deposited amount.<br>**It can take an additional 2-5 working days for the banks to process the amount into your account.</p>
     </div>
   </section>
-  <div class="account__pay">
-    <img src="../img/pay-sprite.png" alt="">
-  </div>
+  <section class="payment  payment--temp">
+    <div class="payment__box"></div>
+  </section>
   <footer class="page-footer">
     <div class="container">
       <div class="page-footer__flex">
