--- a/assets/templates/forex/templates/license.html
+++ b/assets/templates/forex/templates/license.html
@@ -109,9 +109,9 @@
       </div>
     </div>
   </section>
-  <div class="account__pay">
-    <img src="../img/pay-sprite.png" alt="">
-  </div>
+  <section class="payment  payment--temp">
+    <div class="payment__box"></div>
+  </section>
   <footer class="page-footer">
     <div class="container">
       <div class="page-footer__flex">
