--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -59,7 +59,7 @@
   						</div>
   					</div>
   				</div>
-          <a class="panel__link  panel__link--btc" href="">TRADE NOW</a>
+          <a class="panel__link  panel__link--btc" href="https://client.cryptologi.com/en/members/register/real/">TRADE NOW</a>
   			</div>
   			<div class="price-boxes    price-boxes--eth">
   				<div class="panel-group">
@@ -82,7 +82,7 @@
   						</div>
   					</div>
   				</div>
-          <a class="panel__link  panel__link--eth" href="">TRADE NOW</a>
+          <a class="panel__link  panel__link--eth" href="https://client.cryptologi.com/en/members/register/real/">TRADE NOW</a>
   			</div>
         <div class="price-boxes">
   				<div class="panel-group">
@@ -105,7 +105,7 @@
   						</div>
   					</div>
   				</div>
-          <a class="panel__link  panel__link--ltc" href="">TRADE NOW</a>
+          <a class="panel__link  panel__link--ltc" href="https://client.cryptologi.com/en/members/register/real/">TRADE NOW</a>
   			</div>
       </div>
 		<!-- </div> -->
