--- a/assets/templates/xm/sass/blocks/contact.scss
+++ b/assets/templates/xm/sass/blocks/contact.scss
@@ -9,8 +9,9 @@
 .contact__center{
   
   & input {
-    width: 250px;
-    padding: 5px;
+    width: 300px;
+    padding: 10px 20px;
+    font-size: 18px;
     border: 1px solid gray;
     border-radius: 5px;
   }
