--- a/assets/templates/xm/sass/blocks/exchange.scss
+++ b/assets/templates/xm/sass/blocks/exchange.scss
@@ -8,8 +8,10 @@
   }
   
   & input {
-    width: 250px;
-    padding: 5px;
+    width: 300px;
+    margin-top: 10px;
+    padding: 10px 20px;
+    font-size: 18px;
     border: 1px solid gray;
     border-radius: 5px;
   }
@@ -51,6 +53,7 @@
 }
 
 .exchange__fourth {
+  align-self: center;
   
   & button {
     padding: 15px 40px;
