--- a/assets/templates/xm/index.html
+++ b/assets/templates/xm/index.html
@@ -36,6 +36,7 @@
   <section class="title">
     <div class="container">
       <img class="title__logo" src="img/logo.png" alt="XM-crypto">
+      <img class="title__logo-s" src="img/logo-s.png" alt="XM-crypto">
       <h3>Digital Currency<br>Real Value</h3>
       <div class="title__flex">
         <div class="title__left">
@@ -132,8 +133,9 @@
   </section>
   <section class="media">
     <div class="container">
-      <h3>Media Coverage</h3>
-      <div class="media__img"></div>
+      <!-- <h3>Media Coverage</h3> -->
+      <!-- <div class="media__img"></div> -->
+      <img src="img/media-t.png" alt="">
     </div>
   </section>
   <footer class="footer">
