--- a/assets/templates/xm/sass/blocks/traders.scss
+++ b/assets/templates/xm/sass/blocks/traders.scss
@@ -16,3 +16,16 @@
     font-weight: bold;
   }
 }
+
+@media screen and ($tablet-widths) {
+  
+}
+
+@media screen and ($mobile-widths) {  
+  .traders {
+    
+    & h3 {
+      font-size: 22px;
+    }
+  }
+}
