--- a/assets/templates/xm/sass/blocks/exchange.scss
+++ b/assets/templates/xm/sass/blocks/exchange.scss
@@ -96,3 +96,64 @@
     opacity: 0.7;
   }
 }
+
+@media screen and ($tablet-widths) {
+  
+  .exchange {
+    
+    & input {
+      width: 80%;
+    }
+  }
+  
+  .exchange__flex {
+    flex-wrap: wrap;
+  }
+  
+  .exchange__fourth {
+    margin-top: 30px;
+  }
+}
+
+@media screen and ($mobile-widths) {  
+  .exchange {
+    text-align: center;
+    
+    & input {
+      width: 60%;
+      align-self: center;
+    }
+  }
+  
+  .exchange__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .exchange__flex--first {
+    padding: 50px 0;
+  }
+  
+  .exchange__flex--second {
+    padding-bottom: 50px;
+  }
+  
+  .exchange__first,
+  .exchange__third {
+    width: 100%;
+  }
+  
+  .exchange__second {
+    padding: 30px;
+  }
+  
+  // Card
+  .exchange__left,
+  .exchange__middle {
+    margin-bottom: 40px;
+  }
+  
+  .exchange__right {
+    text-align: center;
+  }
+}
