--- a/assets/templates/xm/sass/blocks/footer.scss
+++ b/assets/templates/xm/sass/blocks/footer.scss
@@ -30,3 +30,16 @@
     }
   }
 }
+
+@media screen and ($tablet-widths) {
+  
+}
+
+@media screen and ($mobile-widths) {  
+  .footer__box {
+    
+    & a {
+      text-align: center;
+    }
+  }
+}
