--- a/assets/templates/xm/sass/global/base.scss
+++ b/assets/templates/xm/sass/global/base.scss
@@ -8,3 +8,15 @@ body {
   width: 1100px;
   margin: auto;
 }
+
+@media screen and ($tablet-widths) {
+  .container {
+    width: 95%;
+  }
+}
+
+@media screen and ($mobile-widths) {  
+  // .container {
+  //   width: 95%;
+  // }
+}
