--- a/assets/templates/xm/sass/blocks/buy-sell.scss
+++ b/assets/templates/xm/sass/blocks/buy-sell.scss
@@ -48,17 +48,28 @@
     font-size: 30px;
     font-weight: bold;
     border: 3px solid #f7c107;
-    background: transparent;
+    // background: transparent;
     transition: 0.3s;
     cursor: pointer;
-    
-    &:hover {
-      color: #25224c;
-      background: #f7c107;
-    }
   }
 }
 
 .choose__btn-bitcoin {
-  background: url('../img/title-bitcoin.png');
+  padding-top: 220px;
+  background: url('../img/title-bitcoin.png') no-repeat 50% 20%;
+  
+  &:hover {
+    color: #25224c;
+    background: #f7c107 url('../img/title-bitcoin.png') no-repeat 50% 10%;
+  }
+}
+
+.choose__btn-ethereum {
+  padding-top: 220px;
+  background: url('../img/title-ethereum.png') no-repeat 50% 20%;
+  
+  &:hover {
+    color: #25224c;
+    background: #f7c107 url('../img/title-ethereum.png') no-repeat 50% 10%;
+  }
 }
