finish buy page

--- a/assets/templates/xm/sass/style.scss
+++ b/assets/templates/xm/sass/style.scss
@@ -13,4 +13,5 @@
 @import 'blocks/media';
 @import 'blocks/footer';
 
-@import 'blocks/buy-sell';
+@import 'blocks/choose';
+@import 'blocks/amount';
