--- a/assets/templates/xm/css/style.css
+++ b/assets/templates/xm/css/style.css
@@ -36,6 +36,9 @@ body {
   justify-content: space-between;
   padding: 15px 0; }
 
+.header__logo {
+  margin-top: -15px; }
+
 .header__nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -542,3 +545,93 @@ body {
   .choose__btn-ethereum:hover {
     color: #25224c;
     background: #f7c107 url("../img/title-ethereum.png") no-repeat 50% 10%; }
+
+.amount h3 {
+  margin-top: 0px;
+  padding-top: 100px;
+  color: #25224c;
+  font-size: 30px;
+  text-align: center;
+  text-transform: uppercase; }
+
+.amount label {
+  color: #0038b8;
+  font-size: 20px;
+  font-weight: bold;
+  text-transform: uppercase; }
+
+.amount input {
+  width: 300px;
+  margin-top: 10px;
+  padding: 10px 20px;
+  font-size: 18px;
+  border: 2px solid #f7c107;
+  border-radius: 5px; }
+
+.amount input::-webkit-input-placeholder {
+  text-align: right; }
+
+.amount input:-ms-input-placeholder {
+  text-align: right; }
+
+.amount input::-ms-input-placeholder {
+  text-align: right; }
+
+.amount input::placeholder {
+  text-align: right; }
+
+.amount__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around; }
+
+.amount__flex--second {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.amount__first,
+.amount__third {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+
+.amount__second {
+  -ms-flex-item-align: center;
+  align-self: center; }
+  .amount__second button {
+    width: 46px;
+    height: 33px;
+    border: none;
+    background: url("../img/ex-arrow.png"); }
+
+.amount__left {
+  width: 470px;
+  height: 430px;
+  margin-right: 25px;
+  background: url("../img/hand.png") no-repeat top; }
+
+.amount__right {
+  -ms-flex-item-align: center;
+  align-self: center;
+  margin-left: 25px;
+  text-transform: uppercase; }
+  .amount__right b {
+    color: #0038b8; }
+  .amount__right p {
+    font-weight: bold;
+    opacity: 0.7; }
+  .amount__right button {
+    padding: 15px 60px;
+    color: #0038b8;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: none;
+    background: #f7c107; }
