--- a/assets/templates/xm/css/style.css
+++ b/assets/templates/xm/css/style.css
@@ -89,7 +89,11 @@ body {
     flex-direction: column;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center; } }
+    align-items: center; }
+  .header__logo {
+    position: absolute;
+    -ms-flex-item-align: start;
+    align-self: flex-start; } }
 
 .title {
   background: url("../img/title-bg.png") no-repeat top;
@@ -546,6 +550,50 @@ body {
     color: #25224c;
     background: #f7c107 url("../img/title-ethereum.png") no-repeat 50% 10%; }
 
+@media screen and (max-width: 768px) {
+  .choose h3 {
+    margin-bottom: 40px;
+    font-size: 22px; }
+  .choose__btn-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    padding-top: 50px; }
+    .choose__btn-flex button {
+      margin: 0 10px;
+      padding: 15px;
+      font-size: 30px; }
+  .choose__crypto-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding-bottom: 50px; }
+    .choose__crypto-flex button {
+      width: 80%;
+      height: 300px;
+      margin: 10px;
+      font-size: 22px; }
+  .choose__btn-bitcoin {
+    padding-top: 140px;
+    background: url("../img/title-bitcoin-s.png") no-repeat 50% 20%; }
+    .choose__btn-bitcoin:hover {
+      background: #f7c107 url("../img/title-bitcoin-s.png") no-repeat 50% 10%; }
+  .choose__btn-ethereum {
+    padding-top: 140px;
+    background: url("../img/title-ethereum-s.png") no-repeat 50% 20%; }
+    .choose__btn-ethereum:hover {
+      background: #f7c107 url("../img/title-ethereum-s.png") no-repeat 50% 10%; } }
+
 .amount h3 {
   margin-top: 0px;
   padding-top: 100px;
@@ -561,7 +609,7 @@ body {
   text-transform: uppercase; }
 
 .amount input {
-  width: 300px;
+  width: 260px;
   margin-top: 10px;
   padding: 10px 20px;
   font-size: 18px;
@@ -635,3 +683,31 @@ body {
     text-transform: uppercase;
     border: none;
     background: #f7c107; }
+
+@media screen and (max-width: 768px) {
+  .amount h3 {
+    padding-top: 50px;
+    font-size: 22px; }
+  .amount__flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    text-align: center; }
+  .amount__second {
+    margin: 30px 0; }
+  .amount__left {
+    width: 100%;
+    margin-right: 0;
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+    background-size: cover; }
+  .amount__right {
+    margin-left: 0; } }
