--- a/assets/templates/xm/sass/blocks/amount.scss
+++ b/assets/templates/xm/sass/blocks/amount.scss
@@ -17,7 +17,7 @@
   }
   
   & input {
-    width: 300px;
+    width: 260px;
     margin-top: 10px;
     padding: 10px 20px;
     font-size: 18px;
@@ -86,5 +86,41 @@
     text-transform: uppercase;
     border: none;
     background: #f7c107;
+  }
+}
+
+@media screen and ($tablet-widths) {
+  
+}
+
+@media screen and ($mobile-widths) {  
+  .amount {
+    
+    & h3 {
+      padding-top: 50px;
+      font-size: 22px;
+    }
+  }
+  
+  .amount__flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .amount__second {
+    margin: 30px 0;
+  }
+  
+  .amount__left {
+    width: 100%;
+    margin-right: 0;
+    order: 1;
+    background-size: cover;
+  }
+  
+  .amount__right {
+    margin-left: 0;
   }
 }
