--- a/assets/templates/xm/sass/blocks/choose.scss
+++ b/assets/templates/xm/sass/blocks/choose.scss
@@ -73,3 +73,61 @@
     background: #f7c107 url('../img/title-ethereum.png') no-repeat 50% 10%;
   }
 }
+
+@media screen and ($tablet-widths) {
+  
+}
+
+@media screen and ($mobile-widths) {  
+  .choose {
+    
+    & h3 {
+      margin-bottom: 40px;
+      font-size: 22px;
+    }
+  }
+  
+  .choose__btn-flex {
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+    
+    & button {
+      margin: 0 10px;
+      padding: 15px;
+      font-size: 30px;
+    }
+  }
+  
+  .choose__crypto-flex {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 50px;
+    
+    & button {
+      width: 80%;
+      height: 300px;
+      margin: 10px;
+      font-size: 22px;
+    }
+  }
+  
+  .choose__btn-bitcoin {
+    padding-top: 140px;
+    background: url('../img/title-bitcoin-s.png') no-repeat 50% 20%;
+    
+    &:hover {
+      background: #f7c107 url('../img/title-bitcoin-s.png') no-repeat 50% 10%;
+    }
+  }
+  
+  .choose__btn-ethereum {
+    padding-top: 140px;
+    background: url('../img/title-ethereum-s.png') no-repeat 50% 20%;
+    
+    &:hover {
+      background: #f7c107 url('../img/title-ethereum-s.png') no-repeat 50% 10%;
+    }
+  }
+}
