--- a/assets/templates/xm/sass/blocks/header.scss
+++ b/assets/templates/xm/sass/blocks/header.scss
@@ -70,4 +70,9 @@
     flex-direction: column;
     align-items: center;
   }
+  
+  .header__logo {
+    position: absolute;
+    align-self: flex-start;
+  }
 }
