--- a/assets/templates/xm/templates/buy-sell.html
+++ b/assets/templates/xm/templates/buy-sell.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="container">
       <div class="header__flex">
-        <div class="header__logo">
+        <div class="header__logo  header__logo--two">
           <a href="../index.html">
             <img src="../img/logo-2.png" alt="">
           </a>
