--- a/assets/templates/xm/css/style.css
+++ b/assets/templates/xm/css/style.css
@@ -85,6 +85,8 @@ body {
 @media screen and (max-width: 768px) {
   .header {
     height: 140px; }
+  .header--temp {
+    height: 210px; }
   .header__flex {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -93,6 +95,8 @@ body {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center; }
+  .header__logo {
+    margin-top: 10px; }
   .header__logo--two {
     position: absolute;
     -ms-flex-item-align: start;
@@ -730,6 +734,7 @@ body {
   opacity: 0.7; }
 
 .register__link {
+  padding-top: 30px;
   padding-bottom: 50px; }
   .register__link a {
     display: block;
@@ -795,12 +800,15 @@ body {
   .form__checkbox input {
     width: 50px; }
 
+.form__file input {
+  border: none; }
+
 input[type='submit'] {
   display: block;
   width: 300px;
   margin: auto;
   margin-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   padding: 15px 50px;
   color: #fff;
   font-weight: bold;
@@ -809,3 +817,36 @@ input[type='submit'] {
   border-radius: 50px;
   background: #0038b8;
   cursor: pointer; }
+
+@media screen and (max-width: 768px) {
+  .form label {
+    width: auto;
+    text-align: center; }
+  .form input {
+    width: 80%;
+    margin: auto;
+    margin-top: 10px; }
+  .form__email,
+  .form__password,
+  .form__c-password,
+  .form__f-name,
+  .form__l-name,
+  .form__phone,
+  .form__pass-num,
+  .form__gender,
+  .form__adress,
+  .form__city,
+  .form__file,
+  .form__checkbox {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .form__choose {
+    margin: auto;
+    margin-top: 10px; }
+    .form__choose input {
+      width: auto;
+      margin-top: 5px; }
+  .form__file input {
+    padding: 0; } }
