--- a/assets/templates/xm/sass/blocks/form.scss
+++ b/assets/templates/xm/sass/blocks/form.scss
@@ -64,12 +64,19 @@
   }
 }
 
+.form__file {
+  
+  & input {
+    border: none;
+  }
+}
+
 input[type='submit'] {
   display: block;
   width: 300px;
   margin: auto;
   margin-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   padding: 15px 50px;
   color: #fff;
   font-weight: bold;
@@ -85,4 +92,54 @@ input[type='submit'] {
   }
 }
 
+@media screen and ($tablet-widths) {
+  
+}
 
+@media screen and ($mobile-widths) {  
+  .form {
+    
+    & label {
+      width: auto;
+      text-align: center;
+    }
+    
+    & input {
+      width: 80%;
+      margin: auto;
+      margin-top: 10px;
+    }
+  }
+  
+  .form__email,
+  .form__password,
+  .form__c-password,
+  .form__f-name,
+  .form__l-name,
+  .form__phone,
+  .form__pass-num,
+  .form__gender,
+  .form__adress,
+  .form__city,
+  .form__file,
+  .form__checkbox {
+    flex-direction: column;
+  }
+  
+  .form__choose {
+    margin: auto;
+    margin-top: 10px;
+    
+    & input {
+      width: auto;
+      margin-top: 5px;
+    }
+  }
+  
+  .form__file {
+    
+    & input {
+      padding: 0;
+    }
+  }
+}
