--- a/assets/templates/xm/sass/blocks/header.scss
+++ b/assets/templates/xm/sass/blocks/header.scss
@@ -70,9 +70,16 @@
     height: 140px;
   }
   
+  .header--temp {
+    height: 210px;
+  } 
+  
   .header__flex {
     flex-direction: column;
     align-items: center;
+  }
+  .header__logo {
+    margin-top: 10px;
   }
   
   .header__logo--two {
