--- a/assets/templates/xm/templates/register.html
+++ b/assets/templates/xm/templates/register.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
-  <header class="header">
+  <header class="header  header--temp">
     <div class="container">
       <div class="header__flex">
         <div class="header__logo">
