--- a/assets/templates/xm/index.html
+++ b/assets/templates/xm/index.html
@@ -37,7 +37,7 @@
     <div class="container">
       <img class="title__logo" src="img/logo.png" alt="XM-crypto">
       <img class="title__logo-s" src="img/logo-s.png" alt="XM-crypto">
-      <h3>Digital Currency<br>Real Value</h3>
+      <h3>A trusted and reliable<br>digital currency exchanger</h3>
       <div class="title__flex">
         <div class="title__left">
           <div class="title__box  title__box--bitcoin">
@@ -60,24 +60,24 @@
     <div class="container">
       <div class="info__flex">
         <div class="info__left">
-          <p>If you have a business and you wish to accept Bitcoin as a payment option, while keeping your books in Shekel Dollar or Euro, we offer a «Checkout with Bitcoin» service for stores and online stores.</p>
-          <p>If you have a business that needs to pay suppliers in Bitcoins, we have the perfect product for your business. Feel free to contact us, we will gladly help.</p>
+          <b>*secure:</b>
+          <p>the security of all personal informations, data and funds of our clients is our number one priority.</p>
         </div>
         <div class="info__center">
-          <p>If you have a business and you wish to accept Bitcoin as a payment option, while keeping your books in Shekel Dollar or Euro, we offer a «Checkout with Bitcoin» service for stores and online stores.</p>
-          <p>If you have a business that needs to pay suppliers in Bitcoins, we have the perfect product for your business. Feel free to contact us, we will gladly help.</p>  
+          <b>*exchange:</b>
+          <p>with this platform you get the most liquid order book in the world. Any trader or investor can carry out any exchange of digital currencies.</p>
         </div>
         <div class="info__right">
-          <p>If you have a business and you wish to accept Bitcoin as a payment option, while keeping your books in Shekel Dollar or Euro, we offer a «Checkout with Bitcoin» service for stores and online stores.</p>
-          <p>If you have a business that needs to pay suppliers in Bitcoins, we have the perfect product for your business. Feel free to contact us, we will gladly help.</p>    
+          <b>*margin funding:</b>
+          <p>interest can be earned  by those who provide liquidity through their funds to traders that wish to trade with leverage. Funding is traded on an order book at different periods and at different rates.</p>
         </div>
       </div>
     </div>
   </section>
   <section class="traders">
     <div class="container">
-      <h3>For Traders</h3>
-      <p>Our rates are the most competitivein Israel. We support same day Wire transfer, Cash transfers, with a layout of ever 150 branches, operate a Bitcoin ATM and offer you to purchase your Bitcoins using a Credit Card.</p>
+      <h3>An ideal platform for traders</h3>
+      <p>Bits of Gold (name of site) is a full-featured, on spot trading platform for digital currencies such as Bitcoin, Ethereum, Litcoin, and many more others. On here peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured and are very suitable for both investors and traders.</p>
     </div>
   </section>
   <section class="exchange">
@@ -112,8 +112,8 @@
   </section>
   <section class="business">
     <div class="container">
-      <h3>For business</h3>
-      <p>If you have a business and you wish to accept Bitcoin as a payment option, while keeping your books in Shekel Dollar or Euro, we offer a «Checkout with Bitcoin» service for stores and online stores.<br><br>If you have a business that needs to pay suppliers in Bitcoins, we have the perfect product for your business. Feel free to contact us, we will gladly help.</p>
+      <h3>A Platform suitable for business</h3>
+      <p>Cryptocurrency is a digital currency that makes use of cryptography as a means of security. Due to its security feature, it is impossible to make counterfeits of this currency. This currency is not issued by any government authority, therefore it is impossible for any authority to interfere, influence or manipulate the currency. Just as paper money is used as a medium of exchange in the purchase of goods and services, cryptocurrencies such Bitcoin and Ethereum can also be used for such business purposes.</p>
     </div>
   </section>
   <section class="contact">
