--- a/assets/templates/xm/css/style.css
+++ b/assets/templates/xm/css/style.css
@@ -199,7 +199,7 @@ body {
 .info {
   text-align: center; }
   .info p {
-    width: 90%;
+    width: 350px;
     font-weight: bold;
     opacity: 0.7; }
 
@@ -233,8 +233,7 @@ body {
     font-size: 30px;
     text-transform: uppercase; }
   .traders p {
-    padding-bottom: 50px;
-    font-weight: bold; }
+    padding-bottom: 50px; }
 
 @media screen and (max-width: 768px) {
   .traders h3 {
@@ -386,8 +385,7 @@ body {
   .business p {
     margin-bottom: 0;
     padding-bottom: 50px;
-    color: #fff;
-    font-weight: bold; }
+    color: #fff; }
 
 @media screen and (max-width: 768px) {
   .business h3 {
