--- a/assets/templates/xm/sass/blocks/info.scss
+++ b/assets/templates/xm/sass/blocks/info.scss
@@ -2,7 +2,8 @@
   text-align: center;
   
   & p {
-    width: 90%;
+    width: 350px;
+    // margin: 0;
     font-weight: bold;
     opacity: 0.7;
   }
@@ -13,6 +14,12 @@
   justify-content: space-between;
   padding: 50px 0;
 }
+
+// .info__left,
+// .info__center,
+// .info__right {
+//   width: 200px;
+// }
 
 @media screen and ($tablet-widths) {
   
