--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -69,7 +69,7 @@
   </section>
   <section class="online">
     <div class="container">
-      <h2>Trade Online With Cryptologi Global</h2>
+      <h2>Trade Online With Forex24 Global</h2>
       <p>We provide a complete set of investment services – all tailored to your trading success</p>
       <div class="online__flex">
         <div class="online__box  online__box--zulu">
