add contact page

--- a/assets/templates/forex/sass/style.scss
+++ b/assets/templates/forex/sass/style.scss
@@ -24,3 +24,5 @@
 @import 'blocks/kids';
 @import 'blocks/license';
 @import 'blocks/careers';
+@import 'blocks/contact-us';
+@import 'blocks/form';
