--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -1384,3 +1384,155 @@ body {
     width: auto; }
   .careers__box--support {
     margin-bottom: 30px; } }
+
+.contact hr {
+  width: 90%;
+  height: 2px;
+  border: none;
+  background: #4b426d; }
+
+.contact__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding-bottom: 70px; }
+
+.contact__left {
+  -ms-flex-item-align: center;
+  align-self: center; }
+
+.contact__right {
+  width: 782px;
+  height: 293px;
+  background: url("../img/contact-map.png") no-repeat top; }
+
+@media screen and (max-width: 768px) {
+  .contact__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding-bottom: 50px; }
+  .contact__left {
+    margin-bottom: 30px;
+    text-align: center; }
+  .contact__right {
+    width: auto; } }
+
+.form {
+  width: 900px;
+  margin: auto;
+  padding: 70px 0; }
+  .form input {
+    width: 45%;
+    padding: 10px;
+    font-size: 15px;
+    border: 2px solid #4b426d;
+    border-radius: 5px; }
+  .form input::-webkit-input-placeholder {
+    font-weight: bold;
+    opacity: 0.7; }
+  .form input:-ms-input-placeholder {
+    font-weight: bold;
+    opacity: 0.7; }
+  .form input::-ms-input-placeholder {
+    font-weight: bold;
+    opacity: 0.7; }
+  .form input::placeholder {
+    font-weight: bold;
+    opacity: 0.7; }
+
+.form__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding-bottom: 30px; }
+
+.form__select {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  padding: 9px;
+  color: gray;
+  font-size: 15px;
+  font-weight: bold;
+  border: 2px solid #4b426d;
+  border-radius: 5px; }
+
+.form__textarea {
+  display: block;
+  width: 70%;
+  margin: auto;
+  padding: 10px;
+  font-size: 15px;
+  border: 2px solid #4b426d;
+  border-radius: 5px;
+  resize: none; }
+  .form__textarea::-webkit-input-placeholder {
+    font-size: 17px;
+    font-weight: bold;
+    opacity: 0.7; }
+  .form__textarea:-ms-input-placeholder {
+    font-size: 17px;
+    font-weight: bold;
+    opacity: 0.7; }
+  .form__textarea::-ms-input-placeholder {
+    font-size: 17px;
+    font-weight: bold;
+    opacity: 0.7; }
+  .form__textarea::placeholder {
+    font-size: 17px;
+    font-weight: bold;
+    opacity: 0.7; }
+
+button[type="submit"] {
+  display: block;
+  margin: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding: 10px 50px;
+  color: #2e2963;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 5px;
+  background: #f2c318;
+  -webkit-box-shadow: 3px 3px 0px 0px rgba(121, 121, 121, 0.7);
+  box-shadow: 3px 3px 0px 0px rgba(121, 121, 121, 0.7);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer; }
+  button[type="submit"]:hover {
+    color: #fff;
+    background: #2e2963;
+    -webkit-box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.7);
+    box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.7); }
+
+.form__flex--pb {
+  padding-bottom: 0; }
+
+@media screen and (max-width: 1200px) {
+  .form {
+    width: auto; } }
+
+@media screen and (max-width: 768px) {
+  .form {
+    width: 90%;
+    padding: 50px 0; }
+    .form input {
+      width: auto;
+      margin-bottom: 10px; }
+  .form__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .form__textarea {
+    width: 70%; } }
